# guillepistos

./: .dockerignore  .gitignore  Makefile  Pipfile  mkdocs.yml  pyproject.toml
docs/: about.md  cv.md  features.md  index.md
docs/academia/: index.md
docs/academia/python/: asyncio.md  concurrency.md  decorators.md  profiling.md  pytesting.md  skeleton.md
docs/css/: custom.css
docs/formacion/matematicas/: edos.md
docs/formacion/programacion/aws/: dynamodb.md
docs/formacion/programacion/linux/: install.md
docs/formacion/programacion/python/: decorators.md
docs/pistos/: chickens.md  index.md
scripts/: deploy.sh
unfinished/kubernetes/: index.md
unfinished/math/: bayes.md  index.md  odes.md
unfinished/opinion/: index.md
